--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,8 @@ uuid = "a07bc24c-089c-4998-999d-5f58fed89408"
 authors = ["Steven Whitaker <stwhit@umich.edu>"]
 version = "0.0.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1.5"
